fix: update checkbox and collapse style

--- a/packages/w-design-vue/src/components/checkbox/src/checkbox.scss
+++ b/packages/w-design-vue/src/components/checkbox/src/checkbox.scss
@@ -124,8 +124,8 @@ $checkbox-sizes: (
       opacity: 0;
       left: 5px;
       top: 0;
-      width: 5px;
-      height: 10px;
+      width: 6px;
+      height: 12px;
       border: solid white;
       border-width: 0 2px 2px 0;
       transform: rotate(45deg);
